# Multiple-c-integration-android-ndk

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/msf/experimental/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dum.cpp  dum.h  experimental.cpp
app/src/main/java/com/msf/experimental/: Init.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/msf/experimental/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
